docs/api/qiskit/0.44/qiskit.pulse.library.GaussianDeriv.mdx
---
title: GaussianDeriv
description: API reference for qiskit.pulse.library.GaussianDeriv
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.pulse.library.GaussianDeriv
---

<span id="qiskit-pulse-library-gaussianderiv" />

# qiskit.pulse.library.GaussianDeriv

<Function id="qiskit.pulse.library.GaussianDeriv" name="GaussianDeriv" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.25/qiskit/pulse/library/symbolic_pulses.py" signature="qiskit.pulse.library.GaussianDeriv(duration, amp, sigma, angle=0.0, name=None, limit_amplitude=None)">
  An unnormalized Gaussian derivative pulse.

  The Gaussian function is centered around the halfway point of the pulse, and the envelope of the pulse is given by:

  $$
  f(x) = -\text{A}\frac{x-\mu}{\text{sigma}^{2}}\exp
      \left[-\left(\frac{x-\mu}{2\text{sigma}}\right)^{2}\right]  ,  0 <= x < duration
  $$

  where $\text{A} = \text{amp} \times\exp\left(i\times\text{angle}\right)$, and $\mu=\text{duration}/2$.

  **Parameters**

  *   **duration** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")  *|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")) – Pulse length in terms of the sampling period dt.
  *   **amp** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")  *|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")) – The magnitude of the amplitude of the pulse (the value of the corresponding Gaussian at the midpoint duration/2).
  *   **sigma** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")  *|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")) – A measure of how wide or narrow the corresponding Gaussian peak is in terms of dt; described mathematically in the class docstring.
  *   **angle** ([*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")  *|*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)") *| None*) – The angle in radians of the complex phase factor uniformly scaling the pulse. Default value 0.
  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)") *| None*) – Display name for this pulse envelope.
  *   **limit\_amplitude** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)") *| None*) – If `True`, then limit the amplitude of the waveform to 1. The default is `True` and the amplitude is constrained to 1.

  **Returns**

  ScalableSymbolicPulse instance.

  **Return type**

  [*ScalableSymbolicPulse*](qiskit.pulse.library.ScalableSymbolicPulse "qiskit.pulse.library.symbolic_pulses.ScalableSymbolicPulse")
</Function>

